src/test/deca/syntax/parser/invalid/class_definition_in_class.deca
// Test parser, définition d'une classe dans une autre classe

class A {
    int x = 5;

    class B {
        int y = 12;
    }
}
